--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </header>
                 <section class="main-info"></section>
                 <hr>
-                <h3 class="title-WF">Hourly Weather Forecast</h3>
+                <h3 class="title-WF hourly">Hourly Weather Forecast</h3>
                 <section class="hourly-WF">
                     <div class="hours"></div>
                     <div class="icons"></div>
